# android-cpp-example

./: .gitignore  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/jni/: Android.mk
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  wrapper.cpp
android/app/src/main/java/com/example/some/: MainActivity.kt  grils.kt
android/app/src/main/java/com/example/some/ui/theme/: Color.kt  Layout.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
cpp/: CMakeLists.txt  Config.cmake.in  vcpkg-configuration.json  vcpkg.json
cpp/cmake/: Installing.cmake
cpp/include/Thingy/: thingy.h
cpp/misc/vcpkg/triplets/: arm64-android-v8a-v30.cmake
cpp/src/: stuff.h  thingy.cpp
